deleting spotify credentials from API code

--- a/WorldBankApi.ipynb
+++ b/WorldBankApi.ipynb
@@ -1616,8 +1616,8 @@
    "source": [
     "import spotipy\n",
     "#from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "client_id='a7c49e4b412941709f9ab03c700d61b8'\n",
-    "client_secret='3e46f9fc9338407cb1d0b6a915fb6d4d'\n",
+    "client_id=''\n",
+    "client_secret=''\n",
     "\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
@@ -1671,8 +1671,8 @@
    "source": [
     "import spotipy\n",
     "#from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "client_id='a7c49e4b412941709f9ab03c700d61b8'\n",
-    "client_secret='3e46f9fc9338407cb1d0b6a915fb6d4d'\n",
+    "client_id=''\n",
+    "client_secret=''\n",
     "\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
@@ -1709,8 +1709,8 @@
    "source": [
     "import spotipy\n",
     "#from spotipy.oauth2 import SpotifyClientCredentials\n",
-    "client_id='a7c49e4b412941709f9ab03c700d61b8'\n",
-    "client_secret='3e46f9fc9338407cb1d0b6a915fb6d4d'\n",
+    "client_id=''\n",
+    "client_secret=''\n",
     "\n",
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "\n",
