adding spotify processed files

--- a/WorkInProgressNotebooks/spotifyTopSongsWorldWide.ipynb
+++ b/WorkInProgressNotebooks/spotifyTopSongsWorldWide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +99,8 @@
        "      <td>AR</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2018-01-15</td>\n",
-       "      <td>2018-01-15</td>\n",
+       "      <td>2017-01-06</td>\n",
+       "      <td>2017-01-06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -108,8 +108,8 @@
        "      <td>AR</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2018-02-15</td>\n",
-       "      <td>2018-02-15</td>\n",
+       "      <td>2017-02-03</td>\n",
+       "      <td>2017-02-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -117,8 +117,8 @@
        "      <td>AR</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2018-03-15</td>\n",
-       "      <td>2018-03-15</td>\n",
+       "      <td>2017-03-03</td>\n",
+       "      <td>2017-03-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -126,8 +126,8 @@
        "      <td>AR</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2018-04-15</td>\n",
-       "      <td>2018-04-15</td>\n",
+       "      <td>2017-04-14</td>\n",
+       "      <td>2017-04-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -135,8 +135,8 @@
        "      <td>AR</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2018-05-15</td>\n",
-       "      <td>2018-05-15</td>\n",
+       "      <td>2017-05-12</td>\n",
+       "      <td>2017-05-12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -144,14 +144,14 @@
       ],
       "text/plain": [
        "     COUNTRY A2 (ISO)  Key  Processed   startDate     EndDate\n",
-       "0  Argentina       AR    1          0  2018-01-15  2018-01-15\n",
-       "1  Argentina       AR    1          0  2018-02-15  2018-02-15\n",
-       "2  Argentina       AR    1          0  2018-03-15  2018-03-15\n",
-       "3  Argentina       AR    1          0  2018-04-15  2018-04-15\n",
-       "4  Argentina       AR    1          0  2018-05-15  2018-05-15"
+       "0  Argentina       AR    1          0  2017-01-06  2017-01-06\n",
+       "1  Argentina       AR    1          0  2017-02-03  2017-02-03\n",
+       "2  Argentina       AR    1          0  2017-03-03  2017-03-03\n",
+       "3  Argentina       AR    1          0  2017-04-14  2017-04-14\n",
+       "4  Argentina       AR    1          0  2017-05-12  2017-05-12"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,16 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 568,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#extract top200 solgs for the countries and dates determined in CountryDate dataframe\n",
-    "#looping is not supported, I have to do line by line, so make a variable to \n",
-    "#this step has to be restarted as many times as it fails until we finish processing all rows, dicarding rows errors \n",
-    "#in case of failure, excude last processed row\n",
+    "#extract top songs by country in 2017. \n",
+    "# rows get marked as processed. if the script failes, at re start it will exclude processed/failed rows.\n",
+    "# this needs to be restarted as many times as it fails.\n",
     "\n",
-    "spCountriesToProcess = CountryDate.loc[(CountryDate[\"Processed\"] == 0) & (CountryDate[\"COUNTRY\"]!='RO' ),:]\n",
+    "spCountriesToProcess = CountryDate.loc[(CountryDate[\"Processed\"] == 0) & (CountryDate[\"COUNTRY\"]!='AD' ),:]\n",
     "\n",
     "\n",
     "from fycharts import SpotifyCharts \n",
@@ -190,11 +189,11 @@
     "    print(startDate)  \n",
     "    print (countryCode)\n",
     "    CountryDate.loc[index, 'Processed'] = 1\n",
-    "    CountryDate.loc[index+1, 'Processed'] = 1\n",
+    "   \n",
     "       \n",
-    "    api.viral50Daily(output_file = '../Output/SpotifyTopSongsByCountry.csv', start=startDate, end=EndDate, region=countryCode)\n",
-    "    \n",
-    "\n",
+    "    api.top200Daily(output_file = '../Outputs/Spotify2017Top.csv', start=startDate, end=EndDate, region=countryCode)\n",
+    "#viral50Daily    \n",
+    "#top200Weekly\n",
     "\n"
    ]
   }
