creating Report dataframe for 2017

--- a/Data Cleanup.ipynb
+++ b/Data Cleanup.ipynb
@@ -6,8 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Dependencies"
+    "#Dependencies\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
