--- a/Final .ipynb
+++ b/Final .ipynb
@@ -2,11 +2,256 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dependencies"
+    "#dependencies\n",
+    "import pandas as pd\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "      <th>Life Ladder</th>\n",
+       "      <th>Log GDP per capita</th>\n",
+       "      <th>Social support</th>\n",
+       "      <th>Healthy life expectancy at birth</th>\n",
+       "      <th>Freedom to make life choices</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Perceptions of corruption</th>\n",
+       "      <th>Positive affect</th>\n",
+       "      <th>Negative affect</th>\n",
+       "      <th>Confidence in national government</th>\n",
+       "      <th>Democratic Quality</th>\n",
+       "      <th>Delivery Quality</th>\n",
+       "      <th>Standard deviation of ladder by country-year</th>\n",
+       "      <th>Standard deviation/Mean of ladder by country-year</th>\n",
+       "      <th>GINI index (World Bank estimate)</th>\n",
+       "      <th>GINI index (World Bank estimate), average 2000-15</th>\n",
+       "      <th>gini of household income reported in Gallup, by wp5-year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2.661718</td>\n",
+       "      <td>7.460144</td>\n",
+       "      <td>0.490880</td>\n",
+       "      <td>52.339527</td>\n",
+       "      <td>0.427011</td>\n",
+       "      <td>-0.106340</td>\n",
+       "      <td>0.954393</td>\n",
+       "      <td>0.496349</td>\n",
+       "      <td>0.371326</td>\n",
+       "      <td>0.261179</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.454051</td>\n",
+       "      <td>0.546283</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.286599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>4.639548</td>\n",
+       "      <td>9.373718</td>\n",
+       "      <td>0.637698</td>\n",
+       "      <td>69.051659</td>\n",
+       "      <td>0.749611</td>\n",
+       "      <td>-0.035140</td>\n",
+       "      <td>0.876135</td>\n",
+       "      <td>0.669241</td>\n",
+       "      <td>0.333884</td>\n",
+       "      <td>0.457738</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.682105</td>\n",
+       "      <td>0.578096</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.303250</td>\n",
+       "      <td>0.410488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>5.248912</td>\n",
+       "      <td>9.540244</td>\n",
+       "      <td>0.806754</td>\n",
+       "      <td>65.699188</td>\n",
+       "      <td>0.436670</td>\n",
+       "      <td>-0.194670</td>\n",
+       "      <td>0.699774</td>\n",
+       "      <td>0.641980</td>\n",
+       "      <td>0.288710</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.039765</td>\n",
+       "      <td>0.388607</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.276000</td>\n",
+       "      <td>0.527556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>6.039330</td>\n",
+       "      <td>9.843519</td>\n",
+       "      <td>0.906699</td>\n",
+       "      <td>67.538704</td>\n",
+       "      <td>0.831966</td>\n",
+       "      <td>-0.186300</td>\n",
+       "      <td>0.841052</td>\n",
+       "      <td>0.809423</td>\n",
+       "      <td>0.291717</td>\n",
+       "      <td>0.305430</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.409329</td>\n",
+       "      <td>0.398940</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.476067</td>\n",
+       "      <td>0.394176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>Armenia</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>4.287736</td>\n",
+       "      <td>9.034711</td>\n",
+       "      <td>0.697925</td>\n",
+       "      <td>65.125687</td>\n",
+       "      <td>0.613697</td>\n",
+       "      <td>-0.132166</td>\n",
+       "      <td>0.864683</td>\n",
+       "      <td>0.625014</td>\n",
+       "      <td>0.437149</td>\n",
+       "      <td>0.246901</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.325379</td>\n",
+       "      <td>0.542333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.325067</td>\n",
+       "      <td>0.478877</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        country  year  Life Ladder  Log GDP per capita  Social support  \\\n",
+       "9   Afghanistan  2017     2.661718            7.460144        0.490880   \n",
+       "19      Albania  2017     4.639548            9.373718        0.637698   \n",
+       "25      Algeria  2017     5.248912            9.540244        0.806754   \n",
+       "41    Argentina  2017     6.039330            9.843519        0.906699   \n",
+       "53      Armenia  2017     4.287736            9.034711        0.697925   \n",
+       "\n",
+       "    Healthy life expectancy at birth  Freedom to make life choices  \\\n",
+       "9                          52.339527                      0.427011   \n",
+       "19                         69.051659                      0.749611   \n",
+       "25                         65.699188                      0.436670   \n",
+       "41                         67.538704                      0.831966   \n",
+       "53                         65.125687                      0.613697   \n",
+       "\n",
+       "    Generosity  Perceptions of corruption  Positive affect  Negative affect  \\\n",
+       "9    -0.106340                   0.954393         0.496349         0.371326   \n",
+       "19   -0.035140                   0.876135         0.669241         0.333884   \n",
+       "25   -0.194670                   0.699774         0.641980         0.288710   \n",
+       "41   -0.186300                   0.841052         0.809423         0.291717   \n",
+       "53   -0.132166                   0.864683         0.625014         0.437149   \n",
+       "\n",
+       "    Confidence in national government  Democratic Quality  Delivery Quality  \\\n",
+       "9                            0.261179                 NaN               NaN   \n",
+       "19                           0.457738                 NaN               NaN   \n",
+       "25                                NaN                 NaN               NaN   \n",
+       "41                           0.305430                 NaN               NaN   \n",
+       "53                           0.246901                 NaN               NaN   \n",
+       "\n",
+       "    Standard deviation of ladder by country-year  \\\n",
+       "9                                       1.454051   \n",
+       "19                                      2.682105   \n",
+       "25                                      2.039765   \n",
+       "41                                      2.409329   \n",
+       "53                                      2.325379   \n",
+       "\n",
+       "    Standard deviation/Mean of ladder by country-year  \\\n",
+       "9                                            0.546283   \n",
+       "19                                           0.578096   \n",
+       "25                                           0.388607   \n",
+       "41                                           0.398940   \n",
+       "53                                           0.542333   \n",
+       "\n",
+       "    GINI index (World Bank estimate)  \\\n",
+       "9                                NaN   \n",
+       "19                               NaN   \n",
+       "25                               NaN   \n",
+       "41                               NaN   \n",
+       "53                               NaN   \n",
+       "\n",
+       "    GINI index (World Bank estimate), average 2000-15  \\\n",
+       "9                                                 NaN   \n",
+       "19                                           0.303250   \n",
+       "25                                           0.276000   \n",
+       "41                                           0.476067   \n",
+       "53                                           0.325067   \n",
+       "\n",
+       "    gini of household income reported in Gallup, by wp5-year  \n",
+       "9                                            0.286599         \n",
+       "19                                           0.410488         \n",
+       "25                                           0.527556         \n",
+       "41                                           0.394176         \n",
+       "53                                           0.478877         "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a dataframe from a file using pandas\n",
+    "file = 'Resources/WorldHappinessReport.csv'\n",
+    "# The correct encoding must be used to read the CSV in pandas\n",
+    "RawData = pd.read_csv(file)\n",
+    "WHR_DF=RawData.loc[RawData[\"year\"]==2017,:]\n",
+    "WHR_DF.head()"
    ]
   },
   {
