--- a/Data Cleanup.ipynb
+++ b/Data Cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,10 +85,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "happiness_df = pd.read_csv(\"Resources/WorldHappinessReport.csv\")\n",
+    "tourism_df = pd.read_csv(\"Resources/Tourism.csv\", skiprows=3)\n",
+    "happiness17_df = happiness_df.loc[(happiness_df[\"year\"] == 2017)]\n",
+    "happiness_score = happiness17_df[[\"country\", \"Life Ladder\"]]\n",
+    "happiness_score.columns = [\"Country Name\", \"Happines Score\"]\n",
+    "tourism_number = tourism_df[[\"Country Name\", \"2017\"]]\n",
+    "tourism_number = tourism_number.fillna(0)\n",
+    "merge_table = pd.merge(happiness_score, tourism_number, on = \"Country Name\")\n",
+    "merge_table.to_csv(\"Outputs/Tourism_Happiness.csv\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -168,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
