--- a/WorkInProgressNotebooks/getRating1-Copy2.ipynb
+++ b/WorkInProgressNotebooks/getRating1-Copy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "0                                                            "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,23 +107,15 @@
     "TopSpotify[\"speechiness\"]=''\n",
     "TopSpotify[\"instrumentalness\"]=''\n",
     "\n",
-    "TopSpotify=TopSpotify.head(200)\n",
+    "#TopSpotify=TopSpotify.head(200)\n",
     "TopSpotify.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrying ...1secs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import spotipy\n",
@@ -166,7 +158,7 @@
     "    except (KeyError, IndexError, NoneType):\n",
     "        print(tid)\n",
     "        print(\"Missing field/result... skipping.\")\n",
-    "TopSpotify.to_csv(\"../Outputs/SpotifyTop2017WithFeatures200.csv\", index=False)"
+    "TopSpotify.to_csv(\"../Outputs/SpotifyTop2017WithFeatures2.csv\", index=False)"
    ]
   },
   {
