finished scatter plot

--- a/Final .ipynb
+++ b/Final .ipynb
@@ -287,18 +287,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Comparing Countries Happiness Index with Coutries Average Temperature\n",
+    "\n",
+    "Does the average temperature of a country affect the country's happiness level? \n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#upload datasets \n",
+    "#Happiness index file\n",
+    "\n",
+    "#Weather by city file \n"
+   ]
   },
   {
    "cell_type": "code",
@@ -511,7 +518,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
