--- a/Data Cleanup.ipynb
+++ b/Data Cleanup.ipynb
@@ -10,7 +10,11 @@
     "import pandas as pd\n",
     "import random\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import requests\n",
+    "import json\n",
+    "import os\n",
+    "from pprint import pprint"
    ]
   },
   {
@@ -402,16 +406,159 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. get top songs by country choosing one random day a month for the whole year of 2017"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create a dataframe from a file using pandas\n",
+    "file = 'Resources/CountryCodesLookup.csv'\n",
+    "#upload country lookup\n",
+    "Countries=pd.read_csv(file,encoding=\"ISO-8859-1\")\n",
+    "#upload dates to look for top songs\n",
+    "spDates= pd.read_csv('Resources/DatesForSpotifyTopSongs.csv')\n",
+    "Countries.columns\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filter by countries in spotify\n",
+    "spCountries = Countries.loc[Countries[\"spotifyFlag\"] == 1,[\"COUNTRY\",\"A2 (ISO)\"]]\n",
+    "\n",
+    "# make a list of countries by dates to get their top 200 songs\n",
+    "#cross join\n",
+    "spCountries[\"Key\"]=1\n",
+    "spDates[\"Key\"]=1\n",
+    "spCountries[\"Processed\"]=0\n",
+    "CountryDate = pd.merge(spCountries, spDates, on=\"Key\").reset_index(drop=True)\n",
+    "#.head(1)\n",
+    "#CountryDate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extract top songs by country in 2017. \n",
+    "# rows get marked as processed. If the script failes, at re-start, it will exclude processed/failed rows.\n",
+    "# this needs to be restarted as many times as it fails.\n",
+    "\n",
+    "spCountriesToProcess = CountryDate.loc[(CountryDate[\"Processed\"] == 0) & (CountryDate[\"COUNTRY\"]!='AD' ),:]\n",
+    "\n",
+    "\n",
+    "from fycharts import SpotifyCharts \n",
+    "api = SpotifyCharts.SpotifyCharts()\n",
+    "\n",
+    "\n",
+    "# use iterrows to iterate through pandas dataframe\n",
+    "for index, row in spCountriesToProcess.iterrows():\n",
+    "\n",
+    "    # iterate thru each row of the file\n",
+    "    countryCode = str.lower(row['A2 (ISO)'])\n",
+    "    startDate=row[\"startDate\"]\n",
+    "    EndDate=row[\"EndDate\"]\n",
+    "    \n",
+    "    #get data\n",
+    "    print(startDate)  \n",
+    "    print (countryCode)\n",
+    "    CountryDate.loc[index, 'Processed'] = 1\n",
+    "   \n",
+    "       \n",
+    "    api.top200Daily(output_file = 'Outputs/Spotify2017Top.csv', start=startDate, end=EndDate, region=countryCode)\n",
+    "#viral50Daily    \n",
+    "#top200Weekly\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2. Query spotify API. Find the songs attributes.  Classify all songs found and saved in the Soptify2017Top.cvs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file='Outputs/Spotify2017Top1.csv'\n",
+    "TopSpotify=pd.read_csv(file,encoding=\"ISO-8859-1\")\n",
+    "TopSpotify.columns\n",
+    "TopSpotify[\"uri\"]='spotify:track:'+TopSpotify[\"id\"]\n",
+    "#New columns\n",
+    "TopSpotify[\"happiness\"]=''\n",
+    "TopSpotify[\"energy\"]=''\n",
+    "TopSpotify[\"danceability\"]=''\n",
+    "TopSpotify[\"loudness\"]=''\n",
+    "TopSpotify[\"speechiness\"]=''\n",
+    "TopSpotify[\"instrumentalness\"]=''\n",
+    "\n",
+    "\n",
+    "TopSpotify.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import spotipy\n",
+    "\n",
+    "client_id='hiddenCode'\n",
+    "client_secret='HiddenCode'\n",
+    "\n",
+    "from spotipy.oauth2 import SpotifyClientCredentials\n",
+    "\n",
+    "client_credentials_manager = SpotifyClientCredentials(client_id,client_secret)\n",
+    "sp = spotipy.Spotify(client_credentials_manager=client_credentials_manager)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# use iterrows to iterate through pandas dataframe\n",
+    "for index, row in TopSpotify.iterrows():\n",
+    "\n",
+    "    # iterate thru each row of the file\n",
+    "    tid = row['uri']\n",
+    "    try:\n",
+    "        fearure = sp.audio_features(tid)\n",
+    "        happiness = fearure[0][\"valence\"]\n",
+    "        energy = fearure[0][\"energy\"]\n",
+    "        danceability=fearure[0][\"danceability\"]\n",
+    "        loudness=fearure[0][\"loudness\"]\n",
+    "        speechiness=fearure[0][\"speechiness\"]\n",
+    "        instrumentalness=fearure[0][\"instrumentalness\"]\n",
+    "\n",
+    "    #write back to data frame\n",
+    "               \n",
+    "        TopSpotify.loc[index, 'happiness'] = happiness\n",
+    "        TopSpotify.loc[index, 'energy'] = energy\n",
+    "        TopSpotify.loc[index, 'danceability'] = danceability\n",
+    "        TopSpotify.loc[index, 'loudness'] = loudness\n",
+    "        TopSpotify.loc[index, 'speechiness'] = speechiness\n",
+    "        TopSpotify.loc[index, 'instrumentalness'] = instrumentalness\n",
+    "        \n",
+    "\n",
+    "    except (KeyError, IndexError, NoneType):\n",
+    "        print(tid)\n",
+    "        print(\"Missing field/result... skipping.\")\n",
+    "TopSpotify.to_csv(\"Outputs/SpotifyTop2017Final.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
