--- a/Data Cleanup Group4.ipynb
+++ b/Data Cleanup Group4.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -386,24 +386,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['index', 'Country', 'Cities', 'Country Code'], dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create a dataframe from a file using pandas\n",
+    "file = 'Resources/Capitals.csv'\n",
+    "# read the CSV in pandas\n",
+    "weather = pd.read_csv(file, encoding=\"ISO-8859-1\")\n",
+    "weather.reset_index(inplace=True)\n",
+    "weather.columns"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing field/result... skipping.\n",
+      "Missing field/result... skipping.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set up additional columns to hold information\n",
+    "weather['Temperature'] = \"\"\n",
+    "\n",
+    "base_url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
+    "\n",
+    "#print(response['main']['temp'])\n",
+    "# use iterrows to iterate through pandas dataframe\n",
+    "for index, row in weather.iterrows():\n",
+    "\n",
+    "    # iterate thru each row of the file\n",
+    "    city = row['Cities']\n",
+    "    url = base_url + \"appid=\" + \"082ff2cde1d396b2b896b2335daad199\" + \"&q=\" + city +\"&units=imperial\"\n",
+    "\n",
+    "# assemble url and make API request\n",
+    "    response = requests.get(url).json()\n",
+    "  \n",
+    "    #update the dataframe \n",
+    "    try:\n",
+    "        weather.loc[index, 'Temperature'] = response['main']['temp']\n",
+    "        \n",
+    "    except (KeyError, IndexError):\n",
+    "        print(\"Missing field/result... skipping.\")\n",
+    "#         print(response['main']['temp'])"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Cities</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Temperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Kabul</td>\n",
+       "      <td>AF</td>\n",
+       "      <td>55.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Albania</td>\n",
+       "      <td>Tirana (Tirane)</td>\n",
+       "      <td>AL</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>DZ</td>\n",
+       "      <td>69.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>Andorra la Vella</td>\n",
+       "      <td>AD</td>\n",
+       "      <td>44.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Angola</td>\n",
+       "      <td>Luanda</td>\n",
+       "      <td>AO</td>\n",
+       "      <td>78.8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index      Country            Cities Country Code Temperature\n",
+       "0      0  Afghanistan             Kabul           AF        55.4\n",
+       "1      1      Albania   Tirana (Tirane)           AL            \n",
+       "2      2      Algeria           Algiers           DZ       69.57\n",
+       "3      3      Andorra  Andorra la Vella           AD       44.15\n",
+       "4      4       Angola            Luanda           AO        78.8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -584,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
