--- a/WorkInProgressNotebooks/OpenWeatherMapy.ipynb
+++ b/WorkInProgressNotebooks/OpenWeatherMapy.ipynb
@@ -724,7 +724,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#save to graph folder \n"
+   ]
   }
  ],
  "metadata": {
