Final file updated with Rafael code - pending running regression

--- a/Data Cleanup-Final.ipynb
+++ b/Data Cleanup-Final.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import random\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import requests"
    ]
   },
   {
@@ -32,21 +33,174 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Getting country codes\n",
+    "countrycodes_file = \"Resources/CountryCodesLookup.csv\"\n",
+    "countrycodes = pd.read_csv(countrycodes_file, encoding=\"ISO-8859-1\")\n",
+    "countrycodes = countrycodes.rename(columns={'COUNTRY':'country'})\n",
+    "\n",
+    "#Getting happiness index\n",
+    "happiness_file = \"Resources/WorldHappinessReport.csv\"\n",
+    "happiness = pd.read_csv(happiness_file, encoding=\"ISO-8859-1\")\n",
+    "\n",
+    "happiness2017 = happiness.loc[happiness['year']==2017,['country','Life Ladder']]\n",
+    "print(happiness2017.head())\n",
+    "\n",
+    "#Merging both\n",
+    "mymerge = pd.merge(countrycodes, happiness2017, how=\"left\", on=['country'])\n",
+    "mymerge = mymerge.drop(['A3 (UN)','NUM (UN)','DIALING CODE','spotifyFlag'],axis=1)\n",
+    "print(mymerge.head())"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Checking indicators and grabbing interesting data for analysis\n",
+    "baseurl = \"http://api.worldbank.org/v2/country/\"\n",
+    "year = \"2017\"\n",
+    "\n",
+    "def grabindicator(y):\n",
+    "    if y == 0: #Surface area (sq.km)\n",
+    "        x = \"AG.SRF.TOTL.K2\"\n",
+    "    elif y == 1: #Population, total\n",
+    "        x = \"SP.POP.TOTL\"\n",
+    "    elif y == 2: # Labor Force\n",
+    "        x = \"SL.TLF.TOTL.IN\"\n",
+    "    elif y == 3: # Unemployment, total (% of total labor force) (modeled ILO estimate)\n",
+    "        x = \"SL.UEM.TOTL.ZS\"\n",
+    "    else:\n",
+    "        print(f'Indicator \"{y}\" not available')\n",
+    "    return x\n",
+    "\n",
+    "temp = []\n",
+    "surfacearea = []\n",
+    "population = []\n",
+    "laborforce = []\n",
+    "unemployment = []\n",
+    "\n",
+    "countryfound = []\n",
+    "\n",
+    "def lists(indicatorcod, x, lock, errorfree):\n",
+    "\n",
+    "    try:   \n",
+    "        if indicatorcod == 0: #Surface area (sq.km)\n",
+    "            temp = x[1]\n",
+    "            temp = temp[0]\n",
+    "            surfacearea.append(temp['value'])\n",
+    "    \n",
+    "        elif indicatorcod == 1: #Population, total\n",
+    "            temp = x[1]\n",
+    "            temp = temp[0]\n",
+    "            population.append(temp['value'])         \n",
+    "\n",
+    "        elif indicatorcod == 2: # Labor Force\n",
+    "            temp = x[1]\n",
+    "            temp = temp[0]\n",
+    "            laborforce.append(temp['value'])\n",
+    "\n",
+    "        elif indicatorcod == 3: # Unemployment, total (% of total labor force) (modeled ILO estimate)\n",
+    "            temp = x[1]\n",
+    "            temp = temp[0]\n",
+    "            print (temp)\n",
+    "            print(temp['value'])\n",
+    "            unemployment.append(temp['value'])       \n",
+    "        \n",
+    "        else:\n",
+    "            print(\"*** Error on function 'lists' ***\")\n",
+    "\n",
+    "        \n",
+    "        if lock != 1 and errorfree == 1 and indicatorcod <1:\n",
+    "                countryfound.append(pais)\n",
+    "                lock = 1\n",
+    "        \n",
+    "    except TypeError:\n",
+    "        print(f'Error: Country Code \"{countrycode}\" not found')\n",
+    "\n",
+    "\n",
+    "\n",
+    "for i in range (4):\n",
+    "    indicatorcode = grabindicator(i)\n",
+    "    indicatorcounter = int(i)\n",
+    "    lock = 0\n",
+    "\n",
+    "    for code,pais in zip(mymerge['A2 (ISO)'], mymerge['country']):        \n",
+    "        countrycode = code\n",
+    "        print(pais)        \n",
+    "        print(indicatorcounter)\n",
+    "        query_url = f\"{baseurl}{countrycode}/indicator/{indicatorcode}?date={year}&format=json\"\n",
+    "        print (query_url)\n",
+    "        response = requests.get(query_url).json()\n",
+    "        print(f'response is {response}\\n')\n",
+    "        \n",
+    "        if len(response) < 2:\n",
+    "            print(f'response for {countrycode} is invalid\\n')\n",
+    "            errorfree = 0\n",
+    "        elif response[1] is None:\n",
+    "            print(f'response for {countrycode} is None \\n')\n",
+    "            errorfree = 0\n",
+    "        else:\n",
+    "            errorfree = 1\n",
+    "            lists(indicatorcounter, response, lock, errorfree)\n",
+    "                                  \n",
+    "\n",
+    "print(\"\\n***********all data was collected via the API\")\n",
+    "\n",
+    "countryfound1 = pd.DataFrame(countryfound)\n",
+    "\n",
+    "\n",
+    "#Compiling grabbed data from API Calls into one data frame\n",
+    "mymerge_dict = {\n",
+    "    \"Country\": countryfound,\n",
+    "    \"Surface Area\": surfacearea,\n",
+    "    \"Total Population\": population,\n",
+    "    \"Labor Force\": laborforce,\n",
+    "    \"Total Unemployment\": unemployment}\n",
+    "mymerge_data = pd.DataFrame(mymerge_dict)\n",
+    "\n",
+    "mymerge_data = pd.merge(mymerge, mymerge_data, how=\"left\", left_on=['country'],right_on=['Country'])\n",
+    "mymerge_data = mymerge_data.drop(['Country'],axis=1)\n",
+    "\n",
+    "#Saving all data to disk/file\n",
+    "outputfileCSV = open('Outputs/TotalUnemploymentVsHappinessPlot-Rafael.csv', 'w+' )\n",
+    "outputfile1 = mymerge_data.to_csv(index=True)\n",
+    "outputfileCSV.write(outputfile1)\n",
+    "outputfileCSV.close()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Plotting\n",
+    "y_axis1 = mymerge_data['Life Ladder']       #use this for all plots\n",
+    "x_axis1 = mymerge_data['Total Unemployment']\n",
+    "\n",
+    "Unemployment, ax = plt.subplots()\n",
+    "Unemployment = plt.scatter(x_axis1,y_axis1,marker='s', alpha=0.75, color = \"yellow\",edgecolor =\"black\", label = '% Total Unemployment')\n",
+    "\n",
+    "# Set line for regression \n",
+    "##(slope, intercept, _, _, _) = sci.stats.linregress(x_axis1, y_axis1)\n",
+    "##fit = slope * x_axis1 + intercept\n",
+    "\n",
+    "# Plot line\n",
+    "##ax.plot(x_axis1, fit, 'b--')\n",
+    "\n",
+    "\n",
+    "ax.legend(loc=\"best\")\n",
+    "ax.legend()\n",
+    "ax.grid(True)\n",
+    "plt.title(\"Unemployment vs Happiness\")\n",
+    "plt.ylabel(\"Happiness index\")\n",
+    "plt.xlabel(\"Unemployment\")\n",
+    "\n",
+    "#Save plot to file\n",
+    "Unemployment,plt.savefig(\"Graphs/TotalUnemploymentVsHappinessPlot-RafaelSantos.png\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
