--- a/Data Cleanup Group4.ipynb
+++ b/Data Cleanup Group4.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############################ Move your code to Data Cleanup Final #########################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Dependencies\n",
     "import pandas as pd\n",
     "import random\n",
